Added a start screen that lets you select one or two players